--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "phonegap-nfc",
   "version": "1.2.0",
   "description": "Near Field Communication (NFC) Plugin. Read and write NDEF messages to NFC tags and share NDEF messages with peers.",
+  "scripts": {
+    "build": "node build.js"
+  },
   "cordova": {
     "id": "phonegap-nfc",
     "platforms": [
